fix blurry svg on safari

--- a/style.css
+++ b/style.css
@@ -439,12 +439,10 @@ body.mobile-nav-open .nav__mobile-nav {
     max-width: 600px;
     text-align: center;
   }
-  /*.btn-group {
-    text-align: center;
-    align-items: center;
-    margin: 0 auto;
-    margin-bottom: 3em;
-  }*/
+  .img-screen-ui {
+    -webkit-filter: drop-shadow( -3px 0px 10px rgba(0, 0, 0, .25));
+    filter: drop-shadow( -3px 0px 10px rgba(0, 0, 0, .25));
+  }
   .btn-reserve {
     margin: 0 auto;
     margin-bottom: 3em;
@@ -513,6 +511,8 @@ body.mobile-nav-open .nav__mobile-nav {
     max-width: 500px;
     display: block;
     margin: 0 auto;
+    -webkit-filter: drop-shadow( -3px 0px 10px rgba(0, 0, 0, .25));
+    filter: drop-shadow( -3px 0px 10px rgba(0, 0, 0, .25));
   }
   /*.img-screen-ui {
     max-width: 500px;
